<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BOFileManager</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <!-- button text -->
    <string name="btn_back">返回</string>
    <string name="btn_view">视图</string>
    <string name="btn_copy">复制</string>
    <string name="btn_cut">剪切</string>
    <string name="btn_paste">粘贴</string>
    <string name="btn_new">新建</string>
    <string name="btn_rename">重命名</string>
    <string name="btn_delete">删除</string>
    <string name="btn_multi_select">多选</string>
    <!-- end button text -->

	<!-- bottom info text -->
	<string name="tv_dir">目录:</string>
	<string name="tv_file_count">文件:</string>
	<!-- end bottom info -->
	
	<!-- for layout_main_phone -->
	<string name="tv_sdcard">存储</string>
	<string name="tv_apk">应用</string>
	<string name="tv_video">视频</string>
	<string name="tv_picture">图片</string>
	<string name="tv_soft_manager">软件管理</string>
	<string name="tv_trash">垃圾箱</string>
	<string name="tv_music">音乐</string>
	<string name="tv_root">根目录</string>
	<!-- end layout_main_phone -->
</resources>
