<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#40000000">
        <TextView android:id="@+id/btn_copy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_copy"
            android:gravity="center"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:textColor="#ffffffff" />
        <TextView android:id="@+id/btn_cut"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:text="@string/btn_cut"
            android:textColor="#ffffffff" />
        <TextView android:id="@+id/btn_paste"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:text="@string/btn_paste"
            android:textColor="#ffffffff" />
        <TextView android:id="@+id/btn_new"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:text="@string/btn_new"
            android:textColor="#ffffffff" />
        <TextView android:id="@+id/btn_rename"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:text="@string/btn_rename"
            android:textColor="#ffffffff" />
        <TextView android:id="@+id/btn_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:text="@string/btn_delete"
            android:textColor="#ffffffff" />
        <TextView android:id="@+id/btn_multi_select"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:text="@string/btn_multi_select"
            android:textColor="#ffffffff" />
    </LinearLayout>
    
    <ListView android:id="@+id/listview01"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#60000000" />
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#40000000">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_dir" 
            android:textColor="#ffffffff"/>
    </LinearLayout>

</LinearLayout>
